<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name_capital"
    android:layout_gravity="center"
    android:textSize="36sp"
    android:layout_marginTop="30dp"
    android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/writeup_for_firstPage"
        android:layout_gravity="center"
        android:textSize="26sp"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:background="@drawable/button_outline"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center">

        <TextView
            android:id="@+id/have_an_acct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_acct"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_toEndOf="@id/have_an_acct"
            android:layout_marginLeft="16dp"/>
    </RelativeLayout>



</LinearLayout>