<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.github.florent37.diagonallayout.DiagonalLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:diagonal_angle="10"
        app:diagonal_position="bottom"
        app:diagonal_direction="right"
        android:elevation="4dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/solid_background"
            android:contentDescription="TODO" />

    </com.github.florent37.diagonallayout.DiagonalLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:elevation="8dp"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/set_goals"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/goals_writeup"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/goal_textLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <EditText
                android:id="@+id/input_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/goal"
                android:inputType="text"
                tools:targetApi="26" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_textLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="text"
                tools:targetApi="26" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/difficulty_spinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


                <EditText
                    android:id="@+id/input_start_date"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/startdate"
                    android:inputType="text"
                    tools:targetApi="26" />

                <EditText
                    android:id="@+id/input_end_date"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/endDate"
                    android:inputType="text"
                    android:layout_alignParentRight="true"
                    tools:targetApi="26" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>