<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateGoals">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:diagonal_angle="10"
            app:diagonal_position="bottom"
            app:diagonal_direction="right"
            android:elevation="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/solid_background"/>

        </com.github.florent37.diagonallayout.DiagonalLayout>

        <ProgressBar
            android:id="@+id/signup_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="10dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progressbar"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="8dp"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/createGoals_writeup"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_textLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/goal_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="use"
                    android:hint="@string/title"
                    android:inputType="text"
                    tools:targetApi="26" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_textLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/goal_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="text"
                    tools:targetApi="26" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_textLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </DatePicker>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_textLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/password"
                    android:drawableEnd="@drawable/ic_visibility_black_24dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:targetApi="26" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cnfpassword_textLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_cnfpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/password"
                    android:drawableEnd="@drawable/ic_visibility_black_24dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    tools:targetApi="26" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/create_acct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_outline"
                android:padding="16dp"
                android:text="@string/create_an_account" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>